# mesh-simplification

./: .~lock.comands.ods#  CMakeLists.txt  Makefile  README  comands.ods  mementoElement.hpp  meshDataSimplification.cpp
RobustPredicates/: CMakeLists.txt  predicates.cxx  predicates.h
buildRelease/: Makefile  (+11 more)
new-code/: CMakeLists.txt  Makefile  README  clang_debug.txt  clang_release.txt
new-code/build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  main_simplification
new-code/build-debug/src/: Makefile  cmake_install.cmake
new-code/build-release/: CMakeCache.txt  Makefile  cmake_install.cmake  main_simplification
new-code/build-release/src/: Makefile  cmake_install.cmake
new-code/include/: OnlyGeo.hpp  array_operators.hpp  bconnect.hpp  bcost.hpp  bmesh.hpp  bmeshInfo.hpp  boundingBox.hpp  collapseInfo.hpp  collapsingEdge.hpp  connect.hpp  dataPoint.hpp  geoElement.hpp  geoPoint.hpp  graphItem.hpp  hash.hpp  inc.hpp  intersect.hpp  mesh.hpp  meshInfo.hpp  meshOperation.hpp  point.hpp  projection.hpp  searchPoint.hpp  shapes.hpp  simplification.hpp  structuredData.hpp  undirectedGraphItem.hpp  utility.hpp
new-code/include/declaration/: decl_DataGeo.hpp  decl_OnlyGeo.hpp  decl_bcost.hpp
new-code/include/implementation/: imp_OnlyGeo.hpp  imp_array_operators.hpp  imp_bconnect.hpp  imp_bcost.hpp  imp_bmesh.hpp  imp_bmeshInfo.hpp  imp_boundingBox.hpp  imp_connect.hpp  imp_geoElement.hpp  imp_geoPoint.hpp  imp_hash.hpp  imp_intersect.hpp  imp_mesh.hpp  imp_meshInfo.hpp  imp_simplification.hpp  imp_structuredData.hpp
new-code/include/inline/: inline_DataGeo.hpp  inline_bcost.hpp  inline_collapsingEdge.hpp  inline_dataPoint.hpp  inline_geoPoint.hpp  inline_graphItem.hpp  inline_intersect.hpp  inline_point.hpp  inline_projection.hpp  inline_searchPoint.hpp  inline_undirectedGraphItem.hpp
new-code/main/: main_simplification.cpp
new-code/mesh/: bunny_5000_07_015_015.inp  left_hemisphere_30000_033_033_033.inp  pawn.txt  pawn_1000_033_033_033.txt  pawn_1000_066_016_016.inp  pawn_1000_07_015_015.inp  pawn_1000_1_0_0_qoi.inp  pawn_500_033_033_033.inp  qoi.ods
new-code/old_stuff/: bconnect_old.hpp
new-code/post_processing/: driver.m
new-code/src/: CMakeLists.txt  DataGeo.cpp  bmesh.cpp  boundingBox.cpp  collapseInfo.cpp  collapsingEdge.cpp  dataPoint.cpp  dataPoint.hpp  geoPoint.cpp  graphItem.cpp  graphItem.hpp  gutility.cpp  hash.cpp  inc.hpp  intersect.cpp  intersection.cpp  meshInfo.cpp  meshOperation.cpp  point.cpp  point.hpp  point.s  points.hpp  projection.cpp  searchPoint.cpp  searchPoint.hpp  searchPoint.txt  shapes.cpp  shapes.hpp  simplification.cpp  structuredData.cpp  undirectedGraphItem.cpp  undirectedGraphItem.hpp  unordered_graphItem.hpp  utility.cpp
new-code/test/: instantiation.cpp  main_bconnect.cpp  main_bmesh.cpp  main_collapse.cpp  main_connect.cpp  main_geoPoint.cpp  main_graphItem.cpp  main_hash  main_hash.cpp  main_intersect.cpp  main_intersection.cpp  main_mesh.cpp  main_meshInfo.cpp  main_meshOperation.cpp  main_point.cpp  main_projection.cpp  main_simplification.cpp  main_structuredData.cpp  main_vector  main_vector.cpp  matlab_script.m  partial_specialization.hpp  partial_specialization_main  partial_specialization_main.cpp  test  test.cpp  test_Point.hpp
src/: CMakeLists.txt  DataGeo.cpp  gutility.cpp  meshSimplification.h  simplification.cpp  structuredData.cpp
src/core/: barCoordinates.cpp  barCoordinates.h  bisection.hpp  graphItem.cpp  graphItem.h  inTetrahedron.cpp  inTriangle.cpp  insidePolygon.cpp  insideVolume.h  miniMatrix.cpp  miniMatrix.h  point.cpp  point.h  point.hpp  shapes.cpp  shapes.hpp  tensor.cpp  tensor.h  triangleMapping.cpp  triangleMapping.h
src/doctor/: doctor1d.cpp  doctor1d.h  doctor2d.cpp  doctor2d.h  meshHandler.hpp  trasformation.cpp  trasformation.h  virus1d.hpp  virus2d.hpp  virus3d.hpp
src/file/: createFile.cpp  createFile.h  downloadMesh.cpp  downloadMesh.h
src/geometry/: CMakeLists.txt  connect1d.hpp  connect2d.hpp  connect3d.hpp  geoElement.hpp  geoElementSearch.cpp  geoElementSearch.h  geoElementSize.hpp  mesh0d.hpp  mesh1d.hpp  mesh2d.hpp  mesh3d.hpp  mesh3dSebe.hpp  meshSearch.hpp  meshSearchStructured.hpp  tricky1d.cpp  tricky1d.h  tricky2d.cpp  tricky2d.h  tricky3d.cpp  tricky3d.h
src/geometry/utility/: CMakeLists.txt  bin.hpp  boostValidateVector.hpp  inSegment.cpp  insidePolygon.h  insideVolume.cpp
src/intersec/: intersecHandler.hpp  intervalIntersection.cpp  intervalIntersection.h  lineIntersection.cpp  lineIntersection.h  meshIntersec.hpp  triangleIntersection.cpp  triangleIntersection.h  triangleLineIntersection.cpp  triangleLineIntersection.h
src/meshOperation/: costFunction.cpp  costFunction.h  isotropicQuality2d.cpp  isotropicQuality2d.h  meshDataSimplification.cpp  meshDataSimplification.h  simplification1d.cpp  simplification1d.h  simplification2d.cpp  simplification2d.h  simplification2dCostFunctionBased.cpp  simplification2dCostFunctionBased.h  taubinSmoothing.cpp  taubinSmoothing.h
src/utility/: bisection.hpp  dump.hpp  exceptions.hpp  inSegment.h  inTetrahedron.h  inTriangle.h  newton.hpp  sortList.hpp  tree.hpp
(+272 files in other folders)
